--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "symfony/validator": "4.3.*",
         "symfony/web-link": "4.3.*",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+      "ext-http": "*"
     },
     "require-dev": {
         "symfony/browser-kit": "4.3.*",
