--- a/travis.yml
+++ b/travis.yml
@@ -8,6 +8,8 @@ before_install:
   - docker-compose up -d
   - docker-compose exec web composer install --no-interaction
   - docker-compose exec web php bin/console doctrine:schema:update --force
+  - yarn install
+  - yarn run webpack
 
 script:
   - docker-compose exec web php bin/phpunit
